feat: update n8n config
Change the event_ts column type to include timezone and add the TZ env var to docker-compose

--- a/n8n/.dev.env
+++ b/n8n/.dev.env
@@ -2,6 +2,7 @@ N8N_HOST=hostName
 N8N_USER=n8nUser
 N8N_PASSWORD=n8nPassword
 N8N_WEBHOOK_URL=webhookUrl
+TZ=Europe/London
 
 POSTGRES_DB=databaseName
 POSTGRES_USER=postgresUser
